Move the contact info + fix whitespace

--- a/css/main.css
+++ b/css/main.css
@@ -234,9 +234,9 @@ h1 {
 }
 
 #contact {
-    bottom: 1em;
+    bottom: 4em;
     font-size: 2em;
-    left: 1em;
+    right: 1em;
     position: fixed;
     z-index: 100;
 }
